# coupang

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: README.md
docs/legacy-moon-project/: 01-overview.md  02-admin-architecture.md  03-coupang-api.md  04-data-model.md  05-flows.md  06-product-form-reference.md  07-tauri-migration-notes.md  README.md
docs/tauri-app/: 01-architecture.md  02-project-setup.md  03-sqlite-schema.md  04-backend-commands.md  05-coupang-rust-port.md  06-crawler-rust-port.md  07-frontend-plan.md  08-build-distribution.md  09-milestones.md  README.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_crawl_master.sql
src-tauri/src/: crawler.rs  db.rs  error.rs  lib.rs  main.rs  settings.rs
src-tauri/src/commands/: coupang.rs  crawl.rs  crawled.rs  drafts.rs  mod.rs  registered.rs
src-tauri/src/coupang/: auth.rs  client.rs  mod.rs  products.rs
src-tauri/tests/fixtures/: hankyeong_hot6.html
src/components/: app-shell.tsx  app-sidebar.tsx  confirm-dialog.tsx
src/components/ui/: button.tsx  card.tsx  sonner.tsx
src/lib/: api.ts  coupang-status.ts  log-store.ts  sites.ts  updater.ts
src/routes/: Dashboard.tsx  Logs.tsx  ProductsTab.tsx  Register.tsx  Settings.tsx
